--- a/_featured_tags/*.md
+++ b/_featured_tags/*.md
@@ -3,7 +3,7 @@ layout: tag-list
 type: tag
 title: Algorithm
 slug: algorithm
-category: devlog
+category: Category
 sidebar: true
 order: 1
 description: >
