--- a/_featured_categories/*1.md
+++ b/_featured_categories/*1.md
@@ -1,8 +1,8 @@
 ---
 layout: list
 type: category
-title: Devlog
-slug: devlog
+title: Study Log
+slug: studylog
 sidebar: true
 order: 2
 description: >
