--- a/_featured_categories/*3.md
+++ b/_featured_categories/*3.md
@@ -1,10 +1,10 @@
 ---
 layout: list
 type: category
-title: Dev. Log
-slug: devlog
+title: Resume
+slug: resume
 sidebar: true
-order: 3
+order: 4
 description: >
   Anything about Development
 ---
