--- a/_posts/devlog/kboopspredict/2024-11-30-post1.md
+++ b/_posts/devlog/kboopspredict/2024-11-30-post1.md
@@ -1,9 +1,19 @@
 ---
 layout: post
-title: "KBO OPS 예측 경진대회 - 개요"
+title: "KBO 타자 OPS 예측 경진대회 - 개요"
 subtitle: "Hydejack Post Writing Tips & Tricks"
 category: devlog
 tags: kboopspredict
 ---
 
-ㅁㄴㅇㄻㄴㄹㅇ
+# KBO 타자 OPS 예측 경진대회
+
+[대회 링크]{:.heading.flip-title} --- 데이콘 대회 링크
+[깃허브]{:.heading.flip-title} --- 작업중인 깃허브 링크
+
+이미 지난 대회 이지만 KBO에 관심이 있어서 한 번 공부할 겸 해보려고 합니다.
+
+jupyter 노트북 그대로 올라갈 예정이며 게시글 수정없이 추가되는 그대로 업로드 됩니다.(1, 2 모두 같은 내용이지만 2가 뒷 내용 추가됨)
+
+[대회 링크]: https://dacon.io/competitions/official/62540/overview/description
+[깃허브]: https://github.com/dlsdud9098/kbo\_ops\_predict
