--- a/_posts/devlog/kboopspredict/2024-11-30-post1.md
+++ b/_posts/devlog/kboopspredict/2024-11-30-post1.md
@@ -10,6 +10,7 @@ tags: kboopspredict
 
 [대회 링크]{:.heading.flip-title} --- 데이콘 대회 링크
 [깃허브]{:.heading.flip-title} --- 작업중인 깃허브 링크
+{:.related-posts.faded}
 
 이미 지난 대회 이지만 KBO에 관심이 있어서 한 번 공부할 겸 해보려고 합니다.
 
