--- a/_posts/devlog/kboopspredict/2024-11-30-post2.md
+++ b/_posts/devlog/kboopspredict/2024-11-30-post2.md
@@ -1259,7 +1259,7 @@ plt.show()
 
 
     
-![png](./main1_files/main1_11_0.png)
+![png](/assets/img/main1_files/main1_11_0.png)
     
 
 
@@ -1281,7 +1281,7 @@ sns.boxplot(x='year', y='OPS', data=preseason, showfliers=False)
 
 
     
-![png](./main1_files/main1_12_1.png)
+![png](/assets/img/main1_files/main1_12_1.png)
     
 
 
