--- a/_posts/devlog/kboopspredict/2024-12-03-post7.md
+++ b/_posts/devlog/kboopspredict/2024-12-03-post7.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "KBO 타자 OPS 예측 경진대회 - 3"
+title: "KBO 타자 OPS 예측 경진대회 - 6"
 subtitle: "Hydejack Post Writing Tips & Tricks"
 category: devlog
 tags: kboopspredict
@@ -12,11 +12,11 @@ import matplotlib.pyplot as plt
 import matplotlib
 import matplotlib.font_manager as fm
 import os
-from IPython.display import HTML
 import seaborn as sns
 from IPython.display import display
 import numpy as np
 import re
+import json
 
 
 pd.options.display.max_columns = None
@@ -33,6 +33,9 @@ font_prop = fm.FontProperties(fname=font_path).get_name()
 
 # 한글 폰트 설정
 matplotlib.rcParams['font.family'] = font_prop
+
+# 전역 팔레트 설정 (예: 'Set2' 팔레트 사용)
+sns.set_palette('Set2')
 ```
 
 
@@ -45,265 +48,13 @@ os.listdir('./datas')
 
     ['Pre_Season_Batter.csv',
      'Regular_Season_Batter.csv',
+     'Regular_Season_Batter copy.csv',
      'submission.csv',
      'Regular_Season_Batter_Day_by_Day_b4.csv']
 
 
 
 ## 데이터 살펴보기
-
-
-```python
-# HTML 파일 내용 읽어오기
-with open('./data_table_description.html', 'r') as f:
-    html_content = f.read()
-
-# HTML 내용 출력
-print('데이터 도메인')
-HTML(html_content)
-```
-
-    데이터 도메인
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table</title>
-    <style>
-        table {
-            font-size: small;
-            border-collapse: collapse;
-            width: 80%; /* 표의 너비를 80%로 설정 */
-            margin: auto; /* 표를 중앙에 정렬 */
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-        th {
-            background-color: #f2f2f2;
-            text-align: left;
-        }
-    </style>
-</head>
-<body>
-    <table>
-        <tr>
-            <th>Column Name</th>
-            <th>Pre/Regular_Season_Batter</th>
-            <th>Regular_Season_Batter_Day_by_Day</th>
-            <th>Submission</th>
-        </tr>
-        <tr>
-            <td>batter_id</td>
-            <td>타자 고유 ID</td>
-            <td>타자 ID</td>
-            <td>선수 고유 ID</td>
-        </tr>
-        <tr>
-            <td>batter_name</td>
-            <td>타자 이름</td>
-            <td>타자 이름</td>
-            <td>선수 이름</td>
-        </tr>
-        <tr>
-            <td>year</td>
-            <td>년도</td>
-            <td>년도</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>team</td>
-            <td>소속 팀</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>avg</td>
-            <td>타율</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>avg1</td>
-            <td></td>
-            <td>해당 경기 타율</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>avg2</td>
-            <td></td>
-            <td>시즌 누적 타율</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>G</td>
-            <td>경기</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>AB</td>
-            <td>타수</td>
-            <td>타수</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>R</td>
-            <td>득점</td>
-            <td>득점</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>H</td>
-            <td>안타</td>
-            <td>안타</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>2B</td>
-            <td>2루타</td>
-            <td>2루타</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>3B</td>
-            <td>3루타</td>
-            <td>3루타</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>HR</td>
-            <td>홈런</td>
-            <td>홈런</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>TB</td>
-            <td>루타</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>RBI</td>
-            <td>타점</td>
-            <td>타점</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>SB</td>
-            <td>도루 성공</td>
-            <td>도루 성공</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>CS</td>
-            <td>도루 실패</td>
-            <td>도루 실패</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>BB</td>
-            <td>볼넷</td>
-            <td>볼넷</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>HBP</td>
-            <td>사구</td>
-            <td>사구</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>SO</td>
-            <td>삼진</td>
-            <td>삼진</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>GDP</td>
-            <td>병살</td>
-            <td>병살</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>SLG</td>
-            <td>장타율</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>OBP</td>
-            <td>출루율</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>E</td>
-            <td>실책</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>height/weight</td>
-            <td>선수 키/몸무게</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>year_born</td>
-            <td>생년월일</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>position</td>
-            <td>수비 위치</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>career</td>
-            <td>커리어</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>starting_salary</td>
-            <td>입단 연봉</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>OPS</td>
-            <td>(OBP+SLG)</td>
-            <td></td>
-            <td>예측 OPS</td>
-        </tr>
-        <tr>
-            <td>date</td>
-            <td></td>
-            <td>날짜</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>opposing_team</td>
-            <td></td>
-            <td>상대 팀</td>
-            <td></td>
-        </tr>
-    </table>
-</body>
-</html>
-
-
-
 
 
 ```python
@@ -767,15 +518,15 @@ preseason.head()
      17  HBP              1393 non-null   int64  
      18  SO               1393 non-null   int64  
      19  GDP              1393 non-null   int64  
-     20  SLG              1364 non-null   float64
-     21  OBP              1368 non-null   float64
+     20  SLG              1393 non-null   float64
+     21  OBP              1393 non-null   float64
      22  E                1393 non-null   int64  
      23  height/weight    1393 non-null   object 
      24  year_born        1393 non-null   object 
      25  position         1393 non-null   object 
      26  career           1393 non-null   object 
      27  starting_salary  1179 non-null   object 
-     28  OPS              1364 non-null   float64
+     28  OPS              1393 non-null   float64
     dtypes: float64(3), int64(18), object(8)
     memory usage: 315.7+ KB
     None
@@ -920,15 +671,15 @@ preseason.head()
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>NaN</td>
-      <td>NaN</td>
+      <td>0.000</td>
+      <td>0.000</td>
       <td>0</td>
       <td>180cm/72kg</td>
       <td>1992년 08월 11일</td>
       <td>내야수(우투좌타)</td>
       <td>광주대성초-광주동성중-광주동성고</td>
       <td>10000만원</td>
-      <td>NaN</td>
+      <td>0.000</td>
     </tr>
     <tr>
       <th>3</th>
@@ -1076,10 +827,10 @@ preseason.describe()
       <td>1393.000000</td>
       <td>1393.000000</td>
       <td>1393.000000</td>
-      <td>1364.000000</td>
-      <td>1368.000000</td>
       <td>1393.000000</td>
-      <td>1364.000000</td>
+      <td>1393.000000</td>
+      <td>1393.000000</td>
+      <td>1393.000000</td>
     </tr>
     <tr>
       <th>mean</th>
@@ -1100,10 +851,10 @@ preseason.describe()
       <td>0.330223</td>
       <td>3.714286</td>
       <td>0.447236</td>
-      <td>0.361012</td>
-      <td>0.317912</td>
+      <td>0.353497</td>
+      <td>0.312206</td>
       <td>0.381910</td>
-      <td>0.676924</td>
+      <td>0.665703</td>
     </tr>
     <tr>
       <th>std</th>
@@ -1124,10 +875,10 @@ preseason.describe()
       <td>0.642204</td>
       <td>3.180884</td>
       <td>0.723364</td>
-      <td>0.269892</td>
-      <td>0.151489</td>
+      <td>0.271998</td>
+      <td>0.155947</td>
       <td>0.729521</td>
-      <td>0.386933</td>
+      <td>0.393702</td>
     </tr>
     <tr>
       <th>min</th>
@@ -1172,10 +923,10 @@ preseason.describe()
       <td>0.000000</td>
       <td>1.000000</td>
       <td>0.000000</td>
-      <td>0.217000</td>
-      <td>0.250000</td>
+      <td>0.200000</td>
+      <td>0.240000</td>
       <td>0.000000</td>
-      <td>0.472000</td>
+      <td>0.459000</td>
     </tr>
     <tr>
       <th>50%</th>
@@ -1196,10 +947,10 @@ preseason.describe()
       <td>0.000000</td>
       <td>3.000000</td>
       <td>0.000000</td>
-      <td>0.344500</td>
       <td>0.333000</td>
+      <td>0.324000</td>
       <td>0.000000</td>
-      <td>0.675000</td>
+      <td>0.670000</td>
     </tr>
     <tr>
       <th>75%</th>
@@ -1220,10 +971,10 @@ preseason.describe()
       <td>1.000000</td>
       <td>5.000000</td>
       <td>1.000000</td>
-      <td>0.478000</td>
+      <td>0.476000</td>
       <td>0.400000</td>
       <td>1.000000</td>
-      <td>0.867000</td>
+      <td>0.865000</td>
     </tr>
     <tr>
       <th>max</th>
@@ -1270,7 +1021,7 @@ plt.show()
 
 
     
-![png](/assets/img/main3_files/main3_11_0.png)
+![png](/assets/img/main5_files/main5_10_0.png)
     
 
 
@@ -1292,7 +1043,7 @@ sns.boxplot(x='year', y='OPS', data=preseason, showfliers=False)
 
 
     
-![png](/assets/img/main3_files/main3_12_1.png)
+![png](/assets/img/main5_files/main5_11_1.png)
     
 
 
@@ -1479,15 +1230,15 @@ preseason_df_2002
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>NaN</td>
-      <td>NaN</td>
+      <td>0.000</td>
+      <td>0.000</td>
       <td>0</td>
       <td>185cm/90kg</td>
       <td>1979년 04월 21일</td>
       <td>외야수(우투좌타)</td>
       <td>고명초-휘문중-휘문고-고려대</td>
       <td>30000만원</td>
-      <td>NaN</td>
+      <td>0.000</td>
     </tr>
     <tr>
       <th>511</th>
@@ -1771,10 +1522,7 @@ nan 값이 있는 행만 추출해 보았다.
 preseason[preseason.isna().any(axis=1) & preseason['starting_salary'].notna()].head()
 ```
 
-    SLG 29
-    OBP 25
     starting_salary 214
-    OPS 29
 
 
 
@@ -1830,166 +1578,6 @@ preseason[preseason.isna().any(axis=1) & preseason['starting_salary'].notna()].h
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>2</th>
-      <td>1</td>
-      <td>강경학</td>
-      <td>2014</td>
-      <td>한화</td>
-      <td>-</td>
-      <td>4</td>
-      <td>0</td>
-      <td>2</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>0</td>
-      <td>180cm/72kg</td>
-      <td>1992년 08월 11일</td>
-      <td>내야수(우투좌타)</td>
-      <td>광주대성초-광주동성중-광주동성고</td>
-      <td>10000만원</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>37</th>
-      <td>8</td>
-      <td>강상원</td>
-      <td>2016</td>
-      <td>한화</td>
-      <td>-</td>
-      <td>6</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>2</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>0</td>
-      <td>172cm/64kg</td>
-      <td>1997년 05월 05일</td>
-      <td>외야수(우투좌타)</td>
-      <td>온양온천초-온양중-북일고</td>
-      <td>3000만원</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>74</th>
-      <td>24</td>
-      <td>김강민</td>
-      <td>2003</td>
-      <td>SK</td>
-      <td>-</td>
-      <td>3</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>0</td>
-      <td>182cm/85kg</td>
-      <td>1982년 09월 13일</td>
-      <td>외야수(우투우타)</td>
-      <td>본리초-대구중-경북고</td>
-      <td>11000만원</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>80</th>
-      <td>24</td>
-      <td>김강민</td>
-      <td>2009</td>
-      <td>SK</td>
-      <td>-</td>
-      <td>2</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>0</td>
-      <td>182cm/85kg</td>
-      <td>1982년 09월 13일</td>
-      <td>외야수(우투우타)</td>
-      <td>본리초-대구중-경북고</td>
-      <td>11000만원</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>90</th>
-      <td>101</td>
-      <td>문선재</td>
-      <td>2009</td>
-      <td>LG</td>
-      <td>-</td>
-      <td>2</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>NaN</td>
-      <td>1.0</td>
-      <td>0</td>
-      <td>184cm/80kg</td>
-      <td>1990년 05월 20일</td>
-      <td>외야수(우투우타)</td>
-      <td>광주서림초-광주동성중-광주동성고-LG-상무</td>
-      <td>5000만원</td>
-      <td>NaN</td>
-    </tr>
   </tbody>
 </table>
 </div>
@@ -2227,15 +1815,15 @@ for i, j in preseason.isnull().sum().items():
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>NaN</td>
-      <td>NaN</td>
+      <td>0.000</td>
+      <td>0.000</td>
       <td>0</td>
       <td>180cm/72kg</td>
       <td>1992년 08월 11일</td>
       <td>내야수(우투좌타)</td>
       <td>광주대성초-광주동성중-광주동성고</td>
       <td>10000만원</td>
-      <td>NaN</td>
+      <td>0.000</td>
     </tr>
     <tr>
       <th>3</th>
@@ -2447,14 +2035,14 @@ for i, j in preseason.isnull().sum().items():
       <td>0</td>
       <td>0</td>
       <td>0.000</td>
-      <td>NaN</td>
+      <td>0.000</td>
       <td>0</td>
       <td>180cm/72kg</td>
       <td>1992년 08월 11일</td>
       <td>내야수(우투좌타)</td>
       <td>광주대성초-광주동성중-광주동성고</td>
       <td>10000만원</td>
-      <td>NaN</td>
+      <td>0.000</td>
     </tr>
     <tr>
       <th>3</th>
@@ -2525,9 +2113,7 @@ for i, j in preseason.isnull().sum().items():
 </div>
 
 
-    OBP 25
     starting_salary 214
-    OPS 29
 
 
 
@@ -2722,7 +2308,7 @@ for i, j in preseason.isnull().sum().items():
       <td>내야수(우투좌타)</td>
       <td>광주대성초-광주동성중-광주동성고</td>
       <td>10000만원</td>
-      <td>NaN</td>
+      <td>0.000</td>
     </tr>
     <tr>
       <th>3</th>
@@ -2794,7 +2380,6 @@ for i, j in preseason.isnull().sum().items():
 
 
     starting_salary 214
-    OPS 29
 
 
 
@@ -3224,6 +2809,25 @@ for i, j in preseason.isnull().sum().items():
     starting_salary 214
 
 
+### 데이터 저장
+
+
+```python
+preseason.to_csv('./datas/Pre_Season_Batter.csv', encoding='utf-8-sig', index=False)
+```
+
+
+```python
+# 불러오기
+preseason = pd.read_csv('./datas/Pre_Season_Batter.csv')
+for i, j in preseason.isnull().sum().items():
+    if not j == 0:
+        print(i, j)
+```
+
+    starting_salary 214
+
+
 ## 연도별 선수 수 확인
 
 
@@ -3243,7 +2847,7 @@ batter_count_preseason.plot(kind='line', x='year', y='preseason')
 
 
     
-![png](/assets/img/main3_files/main3_21_0.png)
+![png](/assets/img/main5_files/main5_23_0.png)
     
 
 
@@ -3567,11 +3171,8 @@ regular_season['SLG'] = regular_season.apply(SLG_calc, axis=1)
 regular_season['OBP'] = regular_season.apply(OBP_calc, axis=1)
 
 # 결측값 확인
-regular_season.isna().sum()
+print(regular_season.isna().sum())
 ```
-
-
-
 
     batter_id             0
     batter_name           0
@@ -3606,7 +3207,6 @@ regular_season.isna().sum()
 
 
 
-
 ```python
 '''
 이제 SLG와 OBP를 채워주었으니 둘을 이용해 OPS를 채워주었다.
@@ -3622,6 +3222,7 @@ def OPS_clac(row):
 
 # OPS 결측값 채우기
 regular_season['OPS'] = regular_season.apply(OPS_clac, axis=1)
+
 # 결측값 확인
 regular_season.isna().sum()
 ```
@@ -3696,47 +3297,17 @@ def AVG_calc(row):
 regular_season['avg'] = regular_season.apply(AVG_calc, axis=1)
 
 # 결측값 확인
-regular_season.isna().sum()
+print(regular_season.isna().sum())
+
+# 데이터 저장
+regular_season.to_csv('./datas/Regular_Season_Batter.csv', encoding='utf-8-sig', index=False)
+
+# 다시 불러오기
+regular_season = pd.read_csv('./datas/Regular_Season_Batter.csv')
 ```
 
     0.33879781420765026
     0.339
-
-
-
-
-
-    batter_id             0
-    batter_name           0
-    year                  0
-    team                  0
-    avg                   0
-    G                     0
-    AB                    0
-    R                     0
-    H                     0
-    2B                    0
-    3B                    0
-    HR                    0
-    TB                    0
-    RBI                   0
-    SB                    0
-    CS                    0
-    BB                    0
-    HBP                   0
-    SO                    0
-    GDP                   0
-    SLG                   0
-    OBP                   0
-    E                     0
-    height/weight       802
-    year_born             0
-    position            802
-    career                0
-    starting_salary    1067
-    OPS                   0
-    dtype: int64
-
 
 
 
@@ -5151,7 +4722,7 @@ preseason_intersection.sort_values(by='new_index').reset_index(drop=True)
 
 
 ```python
-# # 이제 교집합이 분류가 되었는지 확인해 보았다.
+# 이제 교집합이 분류가 되었는지 확인해 보았다.
 
 print(regular_season_intersection.shape, preseason_intersection.shape)
 pd.DataFrame([regular_season_intersection['new_index'], preseason_intersection['new_index']])
@@ -5216,7 +4787,7 @@ scatter가 선형적인 모습을 보이지 않는 것으로 보아 상관관계
 
 
     
-![png](/assets/img/main3_files/main3_35_0.png)
+![png](/assets/img/main5_files/main5_37_0.png)
     
 
 
@@ -5519,7 +5090,7 @@ R(득점), 안타(H), 홈런(HR) 등 타자 쪽 기록이 왼쪽에 가깝다.
 
 
     
-![png](/assets/img/main3_files/main3_38_0.png)
+![png](/assets/img/main5_files/main5_40_0.png)
     
 
 
@@ -5545,13 +5116,13 @@ plt.show()
 ''';
 ```
 
-    /tmp/ipykernel_40310/3071742329.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.
+    /tmp/ipykernel_8701/3071742329.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.
       f.set_xticklabels(f.get_xticklabels(), rotation=90) # x라벨 90회전
 
 
 
     
-![png](/assets/img/main3_files/main3_39_1.png)
+![png](/assets/img/main5_files/main5_41_1.png)
     
 
 
@@ -6695,7 +6266,7 @@ plt.show()
 
 
     
-![png](/assets/img/main3_files/main3_43_0.png)
+![png](/assets/img/main5_files/main5_45_0.png)
     
 
 
@@ -6878,10 +6449,420 @@ regular_season.head(2)
 선수 키/몸무게/포지션은 KBO 홈페이지에서, 그리고 우투우타, 좌투우타와 같은 경우는 위키백과에서 검색하여 가져왔다.
 '''
 
-'./batter_height_weight_position_insert.ipynb'
+'./batter_height_weight_position_insert.ipynb';
+
+
+from batter_height_weight_position_insert import crawl_hand
+
+df_path = './datas/Regular_Season_Batter.csv'
+
+# regular_season = pd.read_csv(df_path)
+crawl_hand(regular_season, df_path)
+
+regular_season = pd.read_csv(df_path)
 ```
+
+    ['강병식', '강봉규', '강정호', '고도현', '고동진', '고메즈', '고영민', '권용관', '김경모', '김경언', '김광연', '김대륙', '김동주', '김연훈', '김원석', '김원섭', '김종찬', '김종호', '나바로', '나성용', '대니돈', '로메로', '로사리오', '로티노', '마낙길', '모상기', '문우람', '박계현', '박기남', '박노민', '박상규', '박용근', '박재상', '박재홍', '박준서', '박진만', '박진원', '백승룡', '성의준', '손용석', '송지만', '스나이더', '신경현', '신명철', '신현철', '안치용', '알드리지', '양영동', '연경흠', '오재필', '용덕한', '우동균', '유선정', '유재혁', '윤완주', '윤요섭', '이명환', '이민재', '이승재', '이양기', '이여상', '이우민', '이인구', '이정식', '이종범', '이종환', '이태원', '이현곤', '이홍구', '이희근', '임재철', '장성호', '전현태', '정보명', '정상교', '정수성', '정현석', '정형식', '조성환', '조영훈', '조인성', '조중근', '지재옥', '진갑용', '차일목', '채상병', '최경철', '최동수', '최민구', '최선호', '최훈락', '칸투', '테임즈', '피에', '한상훈', '한윤섭', '현재윤', '홍성흔', '황목치승', '황선일', '황정립']
+    총 101
+
+
+    /home/apic/python/kbo_ops_predict/batter_height_weight_position_insert.py:121: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.
+      df = pd.read_html(str(handle))[0]
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>batter_name</th>
+      <th>height/weight</th>
+      <th>position</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1337</th>
+      <td>유재혁</td>
+      <td>182cm/70kg</td>
+      <td>외야수()</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+    starting_salary 1067
+    가져오지 못한 데이터는 일일이 넣기
+
 
 
 ```python
+def insert_batter_info(row, batter_height_weight_position):
+    name = row['batter_name']
+    if name in batter_height_weight_position:
+        info = batter_height_weight_position[name]
+        height_weight, position = info.split('/')[0] + '/' + info.split('/')[1], info.split('/')[2]
+        
+        row['height/weight'] = height_weight
+        row['position'] = position
 
+        # display(row[['height/weight', 'position']])
+        
+    return row
+
+with open('output_data.json', 'r', encoding='utf-8') as json_file:
+    data = json.load(json_file)
+print(type(data))
+# data
+
+# apply를 사용하여 각 행에 대해 업데이트 적용
+regular_season = regular_season.apply(insert_batter_info, axis=1, batter_height_weight_position=data)
+display(regular_season[regular_season['batter_name'] == '유재혁'][['batter_name', 'height/weight', 'position']])
+
+regular_season.isna().sum()
 ```
+
+    <class 'dict'>
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>batter_name</th>
+      <th>height/weight</th>
+      <th>position</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1337</th>
+      <td>유재혁</td>
+      <td>182cm/70kg</td>
+      <td>외야수(우투우타)</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
+
+    batter_id             0
+    batter_name           0
+    year                  0
+    team                  0
+    avg                   0
+    G                     0
+    AB                    0
+    R                     0
+    H                     0
+    2B                    0
+    3B                    0
+    HR                    0
+    TB                    0
+    RBI                   0
+    SB                    0
+    CS                    0
+    BB                    0
+    HBP                   0
+    SO                    0
+    GDP                   0
+    SLG                   0
+    OBP                   0
+    E                     0
+    height/weight         0
+    year_born             0
+    position              0
+    career                0
+    starting_salary    1067
+    OPS                   0
+    new_index             0
+    dtype: int64
+
+
+
+
+```python
+'''
+키 대비 몸무게 계산
+높다면 몸무게가 무거워 힘이 세고, 적으면 그만큼 가벼워 스피드가 빠를 것이라 예상
+힘은 연관된 장타율과, 스피드는 연관된 출루율과 상관관계를 분석
+'''
+
+# 키와 몸무게를 분리
+regular_season['height'] = regular_season['height/weight'].apply(lambda x: int(re.findall('\d+', x.split('/')[0])[0]))
+regular_season['weight'] = regular_season['height/weight'].apply(lambda x: int(re.findall('\d+', x.split('/')[1])[0]))
+
+# 키 대비 몸무게
+regular_season['weight_per_height'] = regular_season['weight'] / regular_season['height']
+
+plt.figure(figsize=(20,9))
+plt.subplot(1,2,1)
+
+obp_weight_corr = regular_season['weight_per_height'].corr(regular_season['OBP'])
+slg_weight_corr = regular_season['weight_per_height'].corr(regular_season['SLG'])
+
+sns.scatterplot(x = regular_season['weight_per_height'], y = regular_season['OBP'])
+plt.title('몸무게/키 OBP 상관관계, corr: '+str(round(obp_weight_corr, 2)))
+plt.ylabel('정규리그 OBP')
+plt.xlabel('몸무게/키')
+
+plt.subplot(1,2,2)
+sns.scatterplot(x = regular_season['weight_per_height'], y = regular_season['SLG'])
+plt.title('몸무게/키 SLG 상관관계, corr: '+str(round(slg_weight_corr, 2)))
+plt.ylabel('정규리그 SLG')
+plt.xlabel('몸무게/키')
+plt.show()
+
+'''
+선형적인 모습이 나오지 않는 것을 보아 상관관계는 없는 것 같다.
+''';
+```
+
+
+    
+![png](/assets/img/main5_files/main5_50_0.png)
+    
+
+
+
+```python
+'''
+포지션, 타수별 OPS의 관계를 알아보자
+'''
+
+regular_season['position']
+```
+
+
+
+
+    0       내야수(우투우타)
+    1       내야수(우투좌타)
+    2       내야수(우투좌타)
+    3       내야수(우투좌타)
+    4       내야수(우투좌타)
+              ...    
+    2449    내야수(우투양타)
+    2450    내야수(우투양타)
+    2451    내야수(우투양타)
+    2452    내야수(우투양타)
+    2453    내야수(우투양타)
+    Name: position, Length: 2454, dtype: object
+
+
+
+
+```python
+# 포지션, 타수 분리
+regular_season['pos'] = regular_season['position'].apply(lambda x: x.split('(')[0])
+regular_season['hand'] = regular_season['position'].apply(lambda x: x.split('(')[1].replace(')', '')[2:])
+
+regular_season[['pos', 'hand']]
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>pos</th>
+      <th>hand</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>내야수</td>
+      <td>우타</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>내야수</td>
+      <td>좌타</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>내야수</td>
+      <td>좌타</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>내야수</td>
+      <td>좌타</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>내야수</td>
+      <td>좌타</td>
+    </tr>
+    <tr>
+      <th>...</th>
+      <td>...</td>
+      <td>...</td>
+    </tr>
+    <tr>
+      <th>2449</th>
+      <td>내야수</td>
+      <td>양타</td>
+    </tr>
+    <tr>
+      <th>2450</th>
+      <td>내야수</td>
+      <td>양타</td>
+    </tr>
+    <tr>
+      <th>2451</th>
+      <td>내야수</td>
+      <td>양타</td>
+    </tr>
+    <tr>
+      <th>2452</th>
+      <td>내야수</td>
+      <td>양타</td>
+    </tr>
+    <tr>
+      <th>2453</th>
+      <td>내야수</td>
+      <td>양타</td>
+    </tr>
+  </tbody>
+</table>
+<p>2454 rows × 2 columns</p>
+</div>
+
+
+
+
+```python
+plt.figure(figsize=(20,9))
+plt.subplot(1,2,1)
+
+# 포지션별 OPS
+ax = sns.boxplot(x='pos', y='OPS', data=regular_season, showfliers = False)
+plt.title('포지션별 OPS')
+# 포지션별 중앙값
+median = regular_season.groupby('pos')['OPS'].median().to_dict()
+
+# 박스 중앙에 글자 표시
+for patch, value in zip(ax.patches, median.values()):    
+    # 박스 좌표
+    x_min, y_min, x_max, y_max = patch.get_path().get_extents().bounds
+    
+    x_center = (x_max / 2) + x_min
+    
+    # x_center = (x_min + x_max) / 2
+    
+    # 중앙값 텍스트 추가
+    ax.text(x_center, value, f'중앙값: {value:.1f}', 
+            ha='center', va='center', fontsize=15, color='white')
+
+
+plt.subplot(1,2,2)
+ax = sns.boxplot(x='hand', y = 'OPS', data = regular_season, showfliers = False)
+plt.title('타석 방향별 OPS')
+# 타석 방향별 중앙값
+median = regular_season.groupby('hand')['OPS'].median().to_dict()
+
+# 박스 중앙에 글자 표시
+for patch, value in zip(ax.patches, median.values()):    
+    x_min, y_min, x_max, y_max = patch.get_path().get_extents().bounds
+    x_center = (x_max / 2) + x_min  # 박스의 중앙 x좌표 계산
+    # 중앙값 가져오기
+    hand = patch.get_x()  # 각 박스에 해당하는 x값 (hand 값을 얻기)
+    value = median.get(hand, None)  # 해당 hand 값에 대한 중앙값 가져오기
+
+    if value is not None:  # 중앙값이 존재하는 경우에만 텍스트 추가
+        ax.text(x_center, value, f'중앙값: {value:.1f}', 
+                ha='center', va='center', fontsize=15, color='white')
+
+plt.show()
+```
+
+
+    ---------------------------------------------------------------------------
+
+    AttributeError                            Traceback (most recent call last)
+
+    Cell In[127], line 35
+         33 x_center = (x_max / 2) + x_min  # 박스의 중앙 x좌표 계산
+         34 # 중앙값 가져오기
+    ---> 35 hand = patch.get_x()  # 각 박스에 해당하는 x값 (hand 값을 얻기)
+         36 value = median.get(hand, None)  # 해당 hand 값에 대한 중앙값 가져오기
+         38 if value is not None:  # 중앙값이 존재하는 경우에만 텍스트 추가
+
+
+    AttributeError: 'PathPatch' object has no attribute 'get_x'
+
+
+
+    
+![png](/assets/img/main5_files/main5_53_1.png)
+    
+
+
+
+```python
+ax = sns.boxplot(x='pos', y='OPS', data=regular_season, showfliers = False)
+for label in ax.get_xticklabels():
+    print(label.get_text())
+```
+
+    내야수
+    외야수
+    포수
+
+
+
+    
+![png](/assets/img/main5_files/main5_54_1.png)
+    
+
