--- a/_posts/devlog/kboopspredict/2024-12-03-post6.md
+++ b/_posts/devlog/kboopspredict/2024-12-03-post6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "KBO 타자 OPS 예측 경진대회 - 3"
+title: "KBO 타자 OPS 예측 경진대회 - 5"
 subtitle: "Hydejack Post Writing Tips & Tricks"
 category: devlog
 tags: kboopspredict
@@ -17,6 +17,7 @@ import seaborn as sns
 from IPython.display import display
 import numpy as np
 import re
+import json
 
 
 pd.options.display.max_columns = None
@@ -51,259 +52,6 @@ os.listdir('./datas')
 
 
 ## 데이터 살펴보기
-
-
-```python
-# HTML 파일 내용 읽어오기
-with open('./data_table_description.html', 'r') as f:
-    html_content = f.read()
-
-# HTML 내용 출력
-print('데이터 도메인')
-HTML(html_content)
-```
-
-    데이터 도메인
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table</title>
-    <style>
-        table {
-            font-size: small;
-            border-collapse: collapse;
-            width: 80%; /* 표의 너비를 80%로 설정 */
-            margin: auto; /* 표를 중앙에 정렬 */
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-        th {
-            background-color: #f2f2f2;
-            text-align: left;
-        }
-    </style>
-</head>
-<body>
-    <table>
-        <tr>
-            <th>Column Name</th>
-            <th>Pre/Regular_Season_Batter</th>
-            <th>Regular_Season_Batter_Day_by_Day</th>
-            <th>Submission</th>
-        </tr>
-        <tr>
-            <td>batter_id</td>
-            <td>타자 고유 ID</td>
-            <td>타자 ID</td>
-            <td>선수 고유 ID</td>
-        </tr>
-        <tr>
-            <td>batter_name</td>
-            <td>타자 이름</td>
-            <td>타자 이름</td>
-            <td>선수 이름</td>
-        </tr>
-        <tr>
-            <td>year</td>
-            <td>년도</td>
-            <td>년도</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>team</td>
-            <td>소속 팀</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>avg</td>
-            <td>타율</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>avg1</td>
-            <td></td>
-            <td>해당 경기 타율</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>avg2</td>
-            <td></td>
-            <td>시즌 누적 타율</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>G</td>
-            <td>경기</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>AB</td>
-            <td>타수</td>
-            <td>타수</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>R</td>
-            <td>득점</td>
-            <td>득점</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>H</td>
-            <td>안타</td>
-            <td>안타</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>2B</td>
-            <td>2루타</td>
-            <td>2루타</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>3B</td>
-            <td>3루타</td>
-            <td>3루타</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>HR</td>
-            <td>홈런</td>
-            <td>홈런</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>TB</td>
-            <td>루타</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>RBI</td>
-            <td>타점</td>
-            <td>타점</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>SB</td>
-            <td>도루 성공</td>
-            <td>도루 성공</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>CS</td>
-            <td>도루 실패</td>
-            <td>도루 실패</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>BB</td>
-            <td>볼넷</td>
-            <td>볼넷</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>HBP</td>
-            <td>사구</td>
-            <td>사구</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>SO</td>
-            <td>삼진</td>
-            <td>삼진</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>GDP</td>
-            <td>병살</td>
-            <td>병살</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>SLG</td>
-            <td>장타율</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>OBP</td>
-            <td>출루율</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>E</td>
-            <td>실책</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>height/weight</td>
-            <td>선수 키/몸무게</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>year_born</td>
-            <td>생년월일</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>position</td>
-            <td>수비 위치</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>career</td>
-            <td>커리어</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>starting_salary</td>
-            <td>입단 연봉</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>OPS</td>
-            <td>(OBP+SLG)</td>
-            <td></td>
-            <td>예측 OPS</td>
-        </tr>
-        <tr>
-            <td>date</td>
-            <td></td>
-            <td>날짜</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>opposing_team</td>
-            <td></td>
-            <td>상대 팀</td>
-            <td></td>
-        </tr>
-    </table>
-</body>
-</html>
-
-
-
 
 
 ```python
@@ -1270,7 +1018,7 @@ plt.show()
 
 
     
-![png](/assets/img/main3_files/main3_11_0.png)
+![png](/assets/img/main4_files/main4_10_0.png)
     
 
 
@@ -1292,7 +1040,7 @@ sns.boxplot(x='year', y='OPS', data=preseason, showfliers=False)
 
 
     
-![png](/assets/img/main3_files/main3_12_1.png)
+![png](/assets/img/main4_files/main4_11_1.png)
     
 
 
@@ -3243,7 +2991,7 @@ batter_count_preseason.plot(kind='line', x='year', y='preseason')
 
 
     
-![png](/assets/img/main3_files/main3_21_0.png)
+![png](/assets/img/main4_files/main4_20_0.png)
     
 
 
@@ -5216,7 +4964,7 @@ scatter가 선형적인 모습을 보이지 않는 것으로 보아 상관관계
 
 
     
-![png](/assets/img/main3_files/main3_35_0.png)
+![png](/assets/img/main4_files/main4_34_0.png)
     
 
 
@@ -5519,7 +5267,7 @@ R(득점), 안타(H), 홈런(HR) 등 타자 쪽 기록이 왼쪽에 가깝다.
 
 
     
-![png](/assets/img/main3_files/main3_38_0.png)
+![png](/assets/img/main4_files/main4_37_0.png)
     
 
 
@@ -5545,13 +5293,13 @@ plt.show()
 ''';
 ```
 
-    /tmp/ipykernel_40310/3071742329.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.
+    /tmp/ipykernel_7065/3071742329.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.
       f.set_xticklabels(f.get_xticklabels(), rotation=90) # x라벨 90회전
 
 
 
     
-![png](/assets/img/main3_files/main3_39_1.png)
+![png](/assets/img/main4_files/main4_38_1.png)
     
 
 
@@ -6695,7 +6443,7 @@ plt.show()
 
 
     
-![png](/assets/img/main3_files/main3_43_0.png)
+![png](/assets/img/main4_files/main4_42_0.png)
     
 
 
@@ -6878,10 +6626,285 @@ regular_season.head(2)
 선수 키/몸무게/포지션은 KBO 홈페이지에서, 그리고 우투우타, 좌투우타와 같은 경우는 위키백과에서 검색하여 가져왔다.
 '''
 
-'./batter_height_weight_position_insert.ipynb'
+'./batter_height_weight_position_insert.ipynb';
 ```
 
 
 ```python
+def insert_batter_info(row, batter_height_weight_position):
+    name = row['batter_name']
+    if name in batter_height_weight_position:
+        info = batter_height_weight_position[name]
+        height_weight, position = info.split('/')[0] + '/' + info.split('/')[1], info.split('/')[2]
+        
+        row['height/weight'] = height_weight
+        row['position'] = position
+
+        # display(row[['height/weight', 'position']])
+        
+    return row
+
+with open('output_data.json', 'r', encoding='utf-8') as json_file:
+    data = json.load(json_file)
+print(type(data))
+# data
+
+# apply를 사용하여 각 행에 대해 업데이트 적용
+regular_season = regular_season.apply(insert_batter_info, axis=1, batter_height_weight_position=data)
+display(regular_season[regular_season['batter_name'] == '유재혁'][['batter_name', 'height/weight', 'position']])
+
+regular_season.isna().sum()
+```
+
+    <class 'dict'>
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>batter_name</th>
+      <th>height/weight</th>
+      <th>position</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1337</th>
+      <td>유재혁</td>
+      <td>182cm/70kg</td>
+      <td>외야수(우투우타)</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
+
+    batter_id             0
+    batter_name           0
+    year                  0
+    team                  0
+    avg                   0
+    G                     0
+    AB                    0
+    R                     0
+    H                     0
+    2B                    0
+    3B                    0
+    HR                    0
+    TB                    0
+    RBI                   0
+    SB                    0
+    CS                    0
+    BB                    0
+    HBP                   0
+    SO                    0
+    GDP                   0
+    SLG                   0
+    OBP                   0
+    E                     0
+    height/weight         0
+    year_born             0
+    position              0
+    career                0
+    starting_salary    1067
+    OPS                   0
+    new_index             0
+    dtype: int64
+
+
+
+
+```python
+'''
+키 대비 몸무게 계산
+높다면 몸무게가 무거워 힘이 세고, 적으면 그만큼 가벼워 스피드가 빠를 것이라 예상
+힘은 연관된 장타율과, 스피드는 연관된 출루율과 상관관계를 분석
+'''
+
+# 키와 몸무게를 분리
+regular_season['height'] = regular_season['height/weight'].apply(lambda x: int(re.findall('\d+', x.split('/')[0])[0]))
+regular_season['weight'] = regular_season['height/weight'].apply(lambda x: int(re.findall('\d+', x.split('/')[1])[0]))
+
+# 키 대비 몸무게
+regular_season['weight_per_height'] = regular_season['weight'] / regular_season['height']
+
+plt.figure(figsize=(20,9))
+plt.subplot(1,2,1)
+
+obp_weight_corr = regular_season['weight_per_height'].corr(regular_season['OBP'])
+slg_weight_corr = regular_season['weight_per_height'].corr(regular_season['SLG'])
+
+sns.scatterplot(x = regular_season['weight_per_height'], y = regular_season['OBP'])
+plt.title('몸무게/키 OBP 상관관계, corr: '+str(round(obp_weight_corr, 2)))
+plt.ylabel('정규리그 OBP')
+plt.xlabel('몸무게/키')
+
+plt.subplot(1,2,2)
+sns.scatterplot(x = regular_season['weight_per_height'], y = regular_season['SLG'])
+plt.title('몸무게/키 SLG 상관관계, corr: '+str(round(slg_weight_corr, 2)))
+plt.ylabel('정규리그 SLG')
+plt.xlabel('몸무게/키')
+plt.show()
+
+'''
+선형적인 모습이 나오지 않는 것을 보아 상관관계는 없는 것 같다.
+''';
+```
+
+
+    
+![png](/assets/img/main4_files/main4_47_0.png)
+    
+
+
+
+```python
+'''
+포지션, 타수별 OPS의 관계를 알아보자
+'''
+
+regular_season['position']
+```
+
+
+
+
+    0       내야수(우투우타)
+    1       내야수(우투좌타)
+    2       내야수(우투좌타)
+    3       내야수(우투좌타)
+    4       내야수(우투좌타)
+              ...    
+    2449    내야수(우투양타)
+    2450    내야수(우투양타)
+    2451    내야수(우투양타)
+    2452    내야수(우투양타)
+    2453    내야수(우투양타)
+    Name: position, Length: 2454, dtype: object
+
+
+
+
+```python
+# 포지션, 타수 분리
+regular_season['pos'] = regular_season['position'].apply(lambda x: x.split('(')[0])
+regular_season['hand'] = regular_season['position'].apply(lambda x: x.split('(')[1].replace(')', ''))
+
+regular_season[['pos', 'hand']]
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>pos</th>
+      <th>hand</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>내야수</td>
+      <td>우투우타</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>내야수</td>
+      <td>우투좌타</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>내야수</td>
+      <td>우투좌타</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>내야수</td>
+      <td>우투좌타</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>내야수</td>
+      <td>우투좌타</td>
+    </tr>
+    <tr>
+      <th>...</th>
+      <td>...</td>
+      <td>...</td>
+    </tr>
+    <tr>
+      <th>2449</th>
+      <td>내야수</td>
+      <td>우투양타</td>
+    </tr>
+    <tr>
+      <th>2450</th>
+      <td>내야수</td>
+      <td>우투양타</td>
+    </tr>
+    <tr>
+      <th>2451</th>
+      <td>내야수</td>
+      <td>우투양타</td>
+    </tr>
+    <tr>
+      <th>2452</th>
+      <td>내야수</td>
+      <td>우투양타</td>
+    </tr>
+    <tr>
+      <th>2453</th>
+      <td>내야수</td>
+      <td>우투양타</td>
+    </tr>
+  </tbody>
+</table>
+<p>2454 rows × 2 columns</p>
+</div>
+
+
+
+
+```python
+plt.figure(figsize=(20,9))
+plt.subplot(1,2,1)
+ax = sns.boxplot(x='pos', y='OPS', data=regular_season, showfliters = False)
+
 
 ```
