--- a/_posts/devlog/kboopspredict/2024-11-30-post1.md
+++ b/_posts/devlog/kboopspredict/2024-11-30-post1.md
@@ -8,8 +8,8 @@ tags: kboopspredict
 
 # KBO 타자 OPS 예측 경진대회
 
-[대회 링크]{:.heading.flip-title} --- 데이콘 대회 링크 
-[깃허브]{:.heading.flip-title} --- 작업중인 깃허브 링크 
+* [대회 링크]{:.heading.flip-title} --- 데이콘 대회 링크 
+* [깃허브]{:.heading.flip-title} --- 작업중인 깃허브 링크 
 {:.related-posts.faded}
 
 
