--- a/_posts/devlog/kboopspredict/2024-11-30-post1.md
+++ b/_posts/devlog/kboopspredict/2024-11-30-post1.md
@@ -15,7 +15,8 @@ tags: kboopspredict
 
 이미 지난 대회 이지만 KBO에 관심이 있어서 한 번 공부할 겸 해보려고 합니다.
 
-jupyter 노트북 그대로 올라갈 예정이며 게시글 수정없이 추가되는 그대로 업로드 됩니다. 가장 마지막 글만 보시면 됩니다.
+jupyter 노트북 그대로 올라갈 예정이며 게시글 수정없이 추가되는 그대로 업로드 됩니다. 
+가장 마지막 글만 보시면 됩니다.
 (1, 2 모두 같은 내용이지만 2가 뒷 내용 추가됨)
 
 [대회 링크]: https://dacon.io/competitions/official/62540/overview/description
