--- a/_posts/studylog/algorithms/python/2023-02-07-error0xb1.md
+++ b/_posts/studylog/algorithms/python/2023-02-07-error0xb1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "파이썬 'utf-8' codec can't decode byte 0xb1 in position 1: invalid start byte"
+title: 파이썬 'utf-8' codec can't decode byte 0xb1 in position 1: invalid start byte
 category: studylog
 tags: python
 ---
