--- a/_posts/studylog/algorithms/python/2023-02-07-error0xb1.md
+++ b/_posts/studylog/algorithms/python/2023-02-07-error0xb1.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: 파이썬 'utf-8' codec can't decode byte 0xb1 in position 1: invalid start byte
+title: "파이썬 'utf-8' codec can't decode byte 0xb1 in position 1: invalid start byte"
 category: studylog
 tags: python
 ---
 
-
+---
 ## 오류
 ![](https://velog.velcdn.com/images/dlsdud9098/post/2c4f39da-03d3-4675-ab19-432c4e293800/image.png)
 csv 파일을 불러오는데
