--- a/_posts/devlog/kboopspredict/2024-11-30-post2.md
+++ b/_posts/devlog/kboopspredict/2024-11-30-post2.md
@@ -9,18 +9,32 @@ tags: kboopspredict
 import pandas as pd
 import matplotlib.pyplot as plt
 import matplotlib
+import matplotlib.font_manager as fm
 import os
-from IPython.display import HTML
 import seaborn as sns
 from IPython.display import display
+import numpy as np
+import re
+import json
+
 
 pd.options.display.max_columns = None
 %matplotlib inline
 
 # 한글 폰트
-plt.rcParams['font.family'] = 'NanumGothicCoding'
+plt.rcParams['font.family'] = 'NanumGothic'
 # 마이너스 깨짐 방지
 matplotlib.rcParams['axes.unicode_minus'] = False
+
+# 나눔 폰트 경로 설정
+font_path = '/usr/share/fonts/truetype/nanum/NanumGothic.ttf'  # 나눔 고딕의 경로
+font_prop = fm.FontProperties(fname=font_path).get_name()
+
+# 한글 폰트 설정
+matplotlib.rcParams['font.family'] = font_prop
+
+# 전역 팔레트 설정 (예: 'Set2' 팔레트 사용)
+sns.set_palette('Set2')
 ```
 
 
@@ -31,537 +45,18 @@ os.listdir('./datas')
 
 
 
-    ['Regular_Season_Batter_Day_by_Day_b4.csv',
+    ['Pre_Season_Batter.csv',
      'Regular_Season_Batter.csv',
+     'Pre_Season_Batter copy.csv',
      'submission.csv',
-     'Pre_Season_Batter.csv']
-
-
-
-## 데이터 살펴보기
-
-
-```python
-# HTML 파일 내용 읽어오기
-with open('./data_table_description.html', 'r') as f:
-    html_content = f.read()
-
-# HTML 내용 출력
-print('데이터 도메인')
-HTML(html_content)
-```
-
-    데이터 도메인
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table</title>
-    <style>
-        table {
-            font-size: small;
-            border-collapse: collapse;
-            width: 80%; /* 표의 너비를 80%로 설정 */
-            margin: auto; /* 표를 중앙에 정렬 */
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-        th {
-            background-color: #f2f2f2;
-            text-align: left;
-        }
-    </style>
-</head>
-<body>
-    <table>
-        <tr>
-            <th>Column Name</th>
-            <th>Pre/Regular_Season_Batter</th>
-            <th>Regular_Season_Batter_Day_by_Day</th>
-            <th>Submission</th>
-        </tr>
-        <tr>
-            <td>batter_id</td>
-            <td>타자 고유 ID</td>
-            <td>타자 ID</td>
-            <td>선수 고유 ID</td>
-        </tr>
-        <tr>
-            <td>batter_name</td>
-            <td>타자 이름</td>
-            <td>타자 이름</td>
-            <td>선수 이름</td>
-        </tr>
-        <tr>
-            <td>year</td>
-            <td>년도</td>
-            <td>년도</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>team</td>
-            <td>소속 팀</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>avg</td>
-            <td>타율</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>avg1</td>
-            <td></td>
-            <td>해당 경기 타율</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>avg2</td>
-            <td></td>
-            <td>시즌 누적 타율</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>G</td>
-            <td>경기</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>AB</td>
-            <td>타수</td>
-            <td>타수</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>R</td>
-            <td>득점</td>
-            <td>득점</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>H</td>
-            <td>안타</td>
-            <td>안타</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>2B</td>
-            <td>2루타</td>
-            <td>2루타</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>3B</td>
-            <td>3루타</td>
-            <td>3루타</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>HR</td>
-            <td>홈런</td>
-            <td>홈런</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>TB</td>
-            <td>루타</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>RBI</td>
-            <td>타점</td>
-            <td>타점</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>SB</td>
-            <td>도루 성공</td>
-            <td>도루 성공</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>CS</td>
-            <td>도루 실패</td>
-            <td>도루 실패</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>BB</td>
-            <td>볼넷</td>
-            <td>볼넷</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>HBP</td>
-            <td>사구</td>
-            <td>사구</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>SO</td>
-            <td>삼진</td>
-            <td>삼진</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>GDP</td>
-            <td>병살</td>
-            <td>병살</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>SLG</td>
-            <td>장타율</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>OBP</td>
-            <td>출루율</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>E</td>
-            <td>실책</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>height/weight</td>
-            <td>선수 키/몸무게</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>year_born</td>
-            <td>생년월일</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>position</td>
-            <td>수비 위치</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>career</td>
-            <td>커리어</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>starting_salary</td>
-            <td>입단 연봉</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>OPS</td>
-            <td>(OBP+SLG)</td>
-            <td></td>
-            <td>예측 OPS</td>
-        </tr>
-        <tr>
-            <td>date</td>
-            <td></td>
-            <td>날짜</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>opposing_team</td>
-            <td></td>
-            <td>상대 팀</td>
-            <td></td>
-        </tr>
-    </table>
-</body>
-</html>
-
+     'Regular_Season_Batter_copy.csv',
+     'Regular_Season_Batter_Day_by_Day_b4.csv']
 
 
 
 
 ```python
-pd.read_csv('./datas/Regular_Season_Batter_Day_by_Day_b4.csv').head()
-```
-
-
-
-
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>batter_id</th>
-      <th>batter_name</th>
-      <th>date</th>
-      <th>opposing_team</th>
-      <th>avg1</th>
-      <th>AB</th>
-      <th>R</th>
-      <th>H</th>
-      <th>2B</th>
-      <th>3B</th>
-      <th>HR</th>
-      <th>RBI</th>
-      <th>SB</th>
-      <th>CS</th>
-      <th>BB</th>
-      <th>HBP</th>
-      <th>SO</th>
-      <th>GDP</th>
-      <th>avg2</th>
-      <th>year</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>0</td>
-      <td>가르시아</td>
-      <td>3.24</td>
-      <td>NC</td>
-      <td>0.333</td>
-      <td>3</td>
-      <td>1</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0.333</td>
-      <td>2018</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>0</td>
-      <td>가르시아</td>
-      <td>3.25</td>
-      <td>NC</td>
-      <td>0.000</td>
-      <td>4</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0.143</td>
-      <td>2018</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>0</td>
-      <td>가르시아</td>
-      <td>3.27</td>
-      <td>넥센</td>
-      <td>0.200</td>
-      <td>5</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.167</td>
-      <td>2018</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>0</td>
-      <td>가르시아</td>
-      <td>3.28</td>
-      <td>넥센</td>
-      <td>0.200</td>
-      <td>5</td>
-      <td>1</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.176</td>
-      <td>2018</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>0</td>
-      <td>가르시아</td>
-      <td>3.29</td>
-      <td>넥센</td>
-      <td>0.250</td>
-      <td>4</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>3</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0.190</td>
-      <td>2018</td>
-    </tr>
-  </tbody>
-</table>
-</div>
-
-
-
-
-```python
-pd.read_csv('./datas/Pre_Season_Batter.csv').head(1)
-```
-
-
-
-
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>batter_id</th>
-      <th>batter_name</th>
-      <th>year</th>
-      <th>team</th>
-      <th>avg</th>
-      <th>G</th>
-      <th>AB</th>
-      <th>R</th>
-      <th>H</th>
-      <th>2B</th>
-      <th>3B</th>
-      <th>HR</th>
-      <th>TB</th>
-      <th>RBI</th>
-      <th>SB</th>
-      <th>CS</th>
-      <th>BB</th>
-      <th>HBP</th>
-      <th>SO</th>
-      <th>GDP</th>
-      <th>SLG</th>
-      <th>OBP</th>
-      <th>E</th>
-      <th>height/weight</th>
-      <th>year_born</th>
-      <th>position</th>
-      <th>career</th>
-      <th>starting_salary</th>
-      <th>OPS</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>0</td>
-      <td>가르시아</td>
-      <td>2018</td>
-      <td>LG</td>
-      <td>0.350</td>
-      <td>7</td>
-      <td>20</td>
-      <td>1</td>
-      <td>7</td>
-      <td>1</td>
-      <td>0</td>
-      <td>1</td>
-      <td>11</td>
-      <td>5</td>
-      <td>0</td>
-      <td>0</td>
-      <td>2</td>
-      <td>0</td>
-      <td>3</td>
-      <td>1</td>
-      <td>0.55</td>
-      <td>0.409</td>
-      <td>1</td>
-      <td>177cm/93kg</td>
-      <td>1985년 04월 12일</td>
-      <td>내야수(우투우타)</td>
-      <td>쿠바 Ciego de Avila Maximo Gomez Baez(대)</td>
-      <td>NaN</td>
-      <td>0.959</td>
-    </tr>
-  </tbody>
-</table>
-</div>
-
-
-
-
-```python
-pd.read_csv('./datas/Regular_Season_Batter.csv').head(1)
+pd.read_csv('./datas/Regular_Season_Batter.csv').head()
 ```
 
 
@@ -649,67 +144,133 @@ pd.read_csv('./datas/Regular_Season_Batter.csv').head(1)
       <td>NaN</td>
       <td>0.902</td>
     </tr>
-  </tbody>
-</table>
-</div>
-
-
-
-
-```python
-pd.read_csv('./datas/submission.csv').head()
-```
-
-
-
-
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>batter_id</th>
-      <th>batter_name</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>1</td>
-      <td>강경학</td>
-    </tr>
     <tr>
       <th>1</th>
+      <td>1</td>
+      <td>강경학</td>
+      <td>2011</td>
+      <td>한화</td>
+      <td>0.000</td>
       <td>2</td>
-      <td>강구성</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0.000</td>
+      <td>0.000</td>
+      <td>1</td>
+      <td>180cm/72kg</td>
+      <td>1992년 08월 11일</td>
+      <td>내야수(우투좌타)</td>
+      <td>광주대성초-광주동성중-광주동성고</td>
+      <td>10000만원</td>
+      <td>0.000</td>
     </tr>
     <tr>
       <th>2</th>
+      <td>1</td>
+      <td>강경학</td>
+      <td>2014</td>
+      <td>한화</td>
+      <td>0.221</td>
+      <td>41</td>
+      <td>86</td>
+      <td>11</td>
+      <td>19</td>
+      <td>2</td>
       <td>3</td>
-      <td>강민국</td>
+      <td>1</td>
+      <td>30</td>
+      <td>7</td>
+      <td>0</td>
+      <td>0</td>
+      <td>13</td>
+      <td>2</td>
+      <td>28</td>
+      <td>1</td>
+      <td>0.349</td>
+      <td>0.337</td>
+      <td>6</td>
+      <td>180cm/72kg</td>
+      <td>1992년 08월 11일</td>
+      <td>내야수(우투좌타)</td>
+      <td>광주대성초-광주동성중-광주동성고</td>
+      <td>10000만원</td>
+      <td>0.686</td>
     </tr>
     <tr>
       <th>3</th>
+      <td>1</td>
+      <td>강경학</td>
+      <td>2015</td>
+      <td>한화</td>
+      <td>0.257</td>
+      <td>120</td>
+      <td>311</td>
+      <td>50</td>
+      <td>80</td>
+      <td>7</td>
       <td>4</td>
-      <td>강민호</td>
+      <td>2</td>
+      <td>101</td>
+      <td>27</td>
+      <td>4</td>
+      <td>3</td>
+      <td>40</td>
+      <td>5</td>
+      <td>58</td>
+      <td>3</td>
+      <td>0.325</td>
+      <td>0.348</td>
+      <td>15</td>
+      <td>180cm/72kg</td>
+      <td>1992년 08월 11일</td>
+      <td>내야수(우투좌타)</td>
+      <td>광주대성초-광주동성중-광주동성고</td>
+      <td>10000만원</td>
+      <td>0.673</td>
     </tr>
     <tr>
       <th>4</th>
+      <td>1</td>
+      <td>강경학</td>
+      <td>2016</td>
+      <td>한화</td>
+      <td>0.158</td>
+      <td>46</td>
+      <td>101</td>
+      <td>16</td>
+      <td>16</td>
+      <td>3</td>
+      <td>2</td>
+      <td>1</td>
+      <td>26</td>
+      <td>7</td>
+      <td>0</td>
+      <td>0</td>
+      <td>8</td>
+      <td>2</td>
+      <td>30</td>
       <td>5</td>
-      <td>강백호</td>
+      <td>0.257</td>
+      <td>0.232</td>
+      <td>7</td>
+      <td>180cm/72kg</td>
+      <td>1992년 08월 11일</td>
+      <td>내야수(우투좌타)</td>
+      <td>광주대성초-광주동성중-광주동성고</td>
+      <td>10000만원</td>
+      <td>0.489</td>
     </tr>
   </tbody>
 </table>
@@ -717,10 +278,10 @@ pd.read_csv('./datas/submission.csv').head()
 
 
 
-## 프리시즌 데이터 확인
-
 
 ```python
+# 프리시즌 데이터 확인
+
 preseason = pd.read_csv('./datas/Pre_Season_Batter.csv')
 print(preseason.shape)
 print()
@@ -993,7 +554,7 @@ preseason.head()
 # 데이터 기초 통계량
 
 '''
-1. 선수는 총 344명이 있다.
+1. 선수는 총 1393명이 있다.
 2. 데이터는 2002년부터 2018년까지 존재한다.
 '''
 
@@ -1258,14 +819,14 @@ plt.show()
 
 
     
-![png](/assets/img/main1_files/main1_11_0.png)
+![png](/assets/img/kbo_ops_post_1_files/kbo_ops_post_1_5_0.png)
     
 
 
 
 ```python
 '''
-데이터의 개수가 적어서 그런가 대부분의 연도의 OPS의 평균이 비슷하다.
+데이터의 개수가 적어서 그런가 대부분의 연도의 OPS의 중앙값이 비슷하다.
 '''
 plt.figure(figsize=(20,5))
 sns.boxplot(x='year', y='OPS', data=preseason, showfliers=False)
@@ -1280,7 +841,7 @@ sns.boxplot(x='year', y='OPS', data=preseason, showfliers=False)
 
 
     
-![png](/assets/img/main1_files/main1_12_1.png)
+![png](test_files/test_6_1.png)
     
 
 
@@ -1293,7 +854,7 @@ sns.boxplot(x='year', y='OPS', data=preseason, showfliers=False)
 '''
 
 preseason_df_2002 = preseason[preseason['year'] == 2002]
-preseason_df_2002
+preseason_df_2002.head()
 ```
 
 
@@ -1508,230 +1069,6 @@ preseason_df_2002
       <td>초량초-부산중-부산고-동국대</td>
       <td>30000만원</td>
       <td>0.807</td>
-    </tr>
-    <tr>
-      <th>824</th>
-      <td>202</td>
-      <td>이대호</td>
-      <td>2002</td>
-      <td>롯데</td>
-      <td>0.359</td>
-      <td>11</td>
-      <td>39</td>
-      <td>4</td>
-      <td>14</td>
-      <td>3</td>
-      <td>0</td>
-      <td>1</td>
-      <td>20</td>
-      <td>4</td>
-      <td>0</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>8</td>
-      <td>1</td>
-      <td>0.513</td>
-      <td>0.375</td>
-      <td>1</td>
-      <td>194cm/130kg</td>
-      <td>1982년 06월 21일</td>
-      <td>내야수(우투우타)</td>
-      <td>부산수영초-대동중-경남고-(영남사이버대)-롯데-시애틀</td>
-      <td>21000만원</td>
-      <td>0.888</td>
-    </tr>
-    <tr>
-      <th>844</th>
-      <td>207</td>
-      <td>이범호</td>
-      <td>2002</td>
-      <td>한화</td>
-      <td>0.167</td>
-      <td>7</td>
-      <td>6</td>
-      <td>2</td>
-      <td>1</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>2</td>
-      <td>2</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0.333</td>
-      <td>0.167</td>
-      <td>0</td>
-      <td>183cm/96kg</td>
-      <td>1981년 11월 25일</td>
-      <td>내야수(우투우타)</td>
-      <td>대구수창초-경운중-대구고-한화</td>
-      <td>11000만원</td>
-      <td>0.500</td>
-    </tr>
-    <tr>
-      <th>892</th>
-      <td>283</td>
-      <td>조동찬</td>
-      <td>2002</td>
-      <td>삼성</td>
-      <td>0.000</td>
-      <td>4</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.000</td>
-      <td>0.000</td>
-      <td>0</td>
-      <td>180cm/80kg</td>
-      <td>1983년 07월 27일</td>
-      <td>내야수(우투우타)</td>
-      <td>공주중동초-공주중-공주고</td>
-      <td>12000만원</td>
-      <td>0.000</td>
-    </tr>
-    <tr>
-      <th>984</th>
-      <td>234</td>
-      <td>이진영</td>
-      <td>2002</td>
-      <td>SK</td>
-      <td>0.297</td>
-      <td>11</td>
-      <td>37</td>
-      <td>5</td>
-      <td>11</td>
-      <td>2</td>
-      <td>0</td>
-      <td>2</td>
-      <td>19</td>
-      <td>6</td>
-      <td>2</td>
-      <td>2</td>
-      <td>5</td>
-      <td>0</td>
-      <td>12</td>
-      <td>0</td>
-      <td>0.514</td>
-      <td>0.381</td>
-      <td>0</td>
-      <td>185cm/90kg</td>
-      <td>1980년 06월 15일</td>
-      <td>외야수(좌투좌타)</td>
-      <td>군산초-군산남중-군산상고-쌍방울-SK-LG</td>
-      <td>10000만원</td>
-      <td>0.895</td>
-    </tr>
-    <tr>
-      <th>1115</th>
-      <td>269</td>
-      <td>정상호</td>
-      <td>2002</td>
-      <td>SK</td>
-      <td>0.158</td>
-      <td>13</td>
-      <td>19</td>
-      <td>3</td>
-      <td>3</td>
-      <td>1</td>
-      <td>0</td>
-      <td>1</td>
-      <td>7</td>
-      <td>2</td>
-      <td>0</td>
-      <td>0</td>
-      <td>3</td>
-      <td>1</td>
-      <td>5</td>
-      <td>0</td>
-      <td>0.368</td>
-      <td>0.304</td>
-      <td>5</td>
-      <td>187cm/100kg</td>
-      <td>1982년 12월 24일</td>
-      <td>포수(우투우타)</td>
-      <td>석천초-동인천중-동산고-SK-상무-SK</td>
-      <td>45000만원</td>
-      <td>0.672</td>
-    </tr>
-    <tr>
-      <th>1128</th>
-      <td>270</td>
-      <td>정성훈</td>
-      <td>2002</td>
-      <td>KIA</td>
-      <td>0.267</td>
-      <td>12</td>
-      <td>30</td>
-      <td>5</td>
-      <td>8</td>
-      <td>4</td>
-      <td>0</td>
-      <td>0</td>
-      <td>12</td>
-      <td>4</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>3</td>
-      <td>1</td>
-      <td>0.400</td>
-      <td>0.258</td>
-      <td>0</td>
-      <td>182cm/83kg</td>
-      <td>1980년 06월 27일</td>
-      <td>내야수(우투우타)</td>
-      <td>송정동초-무등중-광주제일고-해태-KIA-현대-우리-LG</td>
-      <td>15000만원</td>
-      <td>0.658</td>
-    </tr>
-    <tr>
-      <th>1327</th>
-      <td>319</td>
-      <td>최형우</td>
-      <td>2002</td>
-      <td>삼성</td>
-      <td>0.000</td>
-      <td>5</td>
-      <td>5</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.000</td>
-      <td>0.167</td>
-      <td>0</td>
-      <td>180cm/106kg</td>
-      <td>1983년 12월 16일</td>
-      <td>외야수(우투좌타)</td>
-      <td>진북초-전주동중-전주고-삼성-경찰-삼성</td>
-      <td>5000만원</td>
-      <td>0.167</td>
     </tr>
   </tbody>
 </table>
@@ -3212,5 +2549,18 @@ for i, j in preseason.isnull().sum().items():
 
 
 ```python
-
+# 데이터 저장
+preseason.to_csv('./datas/Pre_Season_Batter.csv', encoding='utf-8-sig', index=False)
 ```
+
+
+```python
+# 불러오기
+preseason = pd.read_csv('./datas/Pre_Season_Batter.csv')
+for i, j in preseason.isnull().sum().items():
+    if not j == 0:
+        print(i, j)
+```
+
+    starting_salary 214
+
