change leetcode post2

--- a/_posts/studylog/algorithms/leetcode/2025-03-08-leetcode2.md
+++ b/_posts/studylog/algorithms/leetcode/2025-03-08-leetcode2.md
@@ -32,10 +32,9 @@ l2 = ListNode(9, ListNode(9, ListNode(9, ListNode(9))))
 print(l1)
 print(l2)
 
-"""
-ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: None}}}}}}}
-ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: None}}}}
-""";
+# ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: None}}}}}}}
+# ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: None}}}}
+
 
 ```
 
@@ -59,14 +58,13 @@ class Solution:
         # l1, l2중 하나가 None인 경우(둘의 길이가 다를 경우)에도 승수가 있을 경우에 계속 작동
         while l1 is not None or l2 is not None or carry != 0:
 
-            """
-            본래 l1과 l2가 같은 경우에는
-            l1_num = l1.val
-            l2_num = l2.val
-            이것으로 작동 했지만 둘의 길이가 달랐을 때에는 l1.val, l2.val 둘 중 하나에서 오류가 발생했다.
+            # 본래 l1과 l2가 같은 경우에는
+            # l1_num = l1.val
+            # l2_num = l2.val
+            # 이것으로 작동 했지만 둘의 길이가 달랐을 때에는 l1.val, l2.val 둘 중 하나에서 오류가 발생했다.
 
-            어차피 계산식이 끝난 경우(l1, l2 모두 None이 나오고 올림수가 0인 경우)에는 자동으로 종료되기 때문에 계산 할 때 0 대입
-            """;
+            # 어차피 계산식이 끝난 경우(l1, l2 모두 None이 나오고 올림수가 0인 경우)에는 자동으로 종료되기 때문에 계산 할 때 0 대입
+
             l1_num = l1.val if l1 is not None else 0
             l2_num = l2.val if l2 is not None else 0
 
@@ -81,10 +79,10 @@ class Solution:
             # 다시 노드의 끝 부분으로 간다.
             curr = curr.next
 
-            """
-            여기도 마찬가지로 길이가 다를 경우에는 next 값이 없어 에러가 발생한다.
-            따라서 None이 아닌 경우에만 next로 이동하고 None인 경우에는 None을 계속 지속시킨다.
-            """
+            
+            # 여기도 마찬가지로 길이가 다를 경우에는 next 값이 없어 에러가 발생한다.
+            # 따라서 None이 아닌 경우에만 next로 이동하고 None인 경우에는 None을 계속 지속시킨다.
+            
             l1 = l1.next if l1 is not None else None
             l2 = l2.next if l2 is not None else None
 
