--- a/_posts/studylog/algorithms/leetcode/2025-03-08-leetcode2.md
+++ b/_posts/studylog/algorithms/leetcode/2025-03-08-leetcode2.md
@@ -17,7 +17,12 @@ tags: algorithm
 **코드** 
 
 ```python
-
+class ListNode:
+    def __init__(self, val=0, next=None):
+        self.val = val
+        self.next = next
+    def __repr__(self):
+        return f"ListNode{val: {self.val}, next: {repr(self.next)}}"
 
 l1 = ListNode(2, ListNode(4, ListNode(3)))
 l2 = ListNode(5, ListNode(6, ListNode(4)))
