change leetcode post2

--- a/_posts/studylog/algorithms/leetcode/2025-03-08-leetcode2.md
+++ b/_posts/studylog/algorithms/leetcode/2025-03-08-leetcode2.md
@@ -33,9 +33,10 @@ l2 = ListNode(9, ListNode(9, ListNode(9, ListNode(9))))
 print(l1)
 print(l2)
 
-
-# ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: None}}}}}}}
-# ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: None}}}}
+"""
+ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: None}}}}}}}
+ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: ListNode{val: 9, next: None}}}}
+""";
 ```
 
 
@@ -90,12 +91,14 @@ class Solution:
 
         print(dummyHead.next)
 
-        # 값 보기 편하게 출력(이 부분을 사이트에서 주석을 없애면 에러가 발생한다.)
-        # print('[', end='')
-        # while dummyHead.next is not None:
-        #     print(dummyHead.next.val, end=' ')
-        #    dummyHead = dummyHead.next
-        # print(']', end='')
+        """
+        값 보기 편하게 출력(이 부분을 사이트에서 주석을 없애면 에러가 발생한다.)
+        print('[', end='')
+        while dummyHead.next is not None:
+            print(dummyHead.next.val, end=' ')
+           dummyHead = dummyHead.next
+        print(']', end='')
+        """;
 
         return dummyHead.next
 ```
