--- a/_posts/devlog/kboopspredict/2024-11-30-post1.md
+++ b/_posts/devlog/kboopspredict/2024-11-30-post1.md
@@ -14,9 +14,7 @@ tags: kboopspredict
 
 이미 지난 대회 이지만 KBO에 관심이 있어서 한 번 공부할 겸 해보려고 합니다.
 
-jupyter 노트북 그대로 올라갈 예정이며 게시글 수정없이 추가되는 그대로 업로드 됩니다. 
-가장 마지막 글만 보시면 됩니다.
-(1, 2 모두 같은 내용이지만 2가 뒷 내용 추가됨)
+데이콘 경진대회 1등 솔루션 이라는 책을 가지고 공부합니다.
 
 [대회 링크]: https://dacon.io/competitions/official/62540/overview/description
 [깃허브]: https://github.com/dlsdud9098/kbo_ops_predict
